# scp-rcar4

DEBUGbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
DEBUGbuild/arch/: Makefile  cmake_install.cmake
DEBUGbuild/arch/armv8-r/: Makefile  arch-armv8r.ld  cmake_install.cmake
DEBUGbuild/contrib/cmsis/: Makefile  cmake_install.cmake
DEBUGbuild/doc/: Makefile  cmake_install.cmake
DEBUGbuild/framework/: Makefile  cmake_install.cmake
DEBUGbuild/framework/include/: fwk_module_idx.h
DEBUGbuild/framework/src/: fwk_module_list.c
DEBUGbuild/module/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/amu-mmap/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/amu-smcf-drv/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/apcontext/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/armv7m-mpu/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/armv8m-mpu/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/armv8r-mpu/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/atu/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/atu-mmio/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/bootloader/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/ccsm/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/clock/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/cmn-cyprus/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/cmn-skeena/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/cmn600/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/css-clock/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/ddr-phy500/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/debug/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/debugger-cli/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/dmc500/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/dmc620/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/dvfs/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/dw-apb-i2c/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/fch-polled/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/gicx00/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/gtimer/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/i2c/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/isys-rom/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/metrics-analyzer/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/mhu/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/mhu2/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/mhu3/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/mock-clock/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/mock-ppu/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/mock-psu/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/mock-voltage-domain/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/mpmm/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/msg-smt/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/msys-rom/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/noc-s3/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/pcid/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/perf-controller/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/pid-controller/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/pik-clock/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/pl011/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/power-capping/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/power-domain/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/ppu-v0/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/ppu-v1/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/psu/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/rcar4-clock/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/rcar4-mfismh/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/rcar4-pd-core/: Makefile  cmake_install.cmake
DEBUGbuild/module/modules/rcar4-pd-sysc/: Makefile  cmake_install.cmake
Dummy_RTOS/: Makefile  dummy_rtos.dump  dummy_rtos.elf  dummy_rtos.map  dummy_rtos.srec
Dummy_RTOS/common/: scif.c
Dummy_RTOS/include/: reg_rcar_gen3.h
Dummy_RTOS/rtos/: rtos.ld.S  rtos_main.c
arch/: CMakeLists.txt
arch/arm/armv8-r/: Architecture.cmake  CMakeLists.txt
arch/arm/armv8-r/include/: arch_gic.h  arch_helpers.h  arch_system.h  generic_timer.c  gic.h  scif.c  utils_def.h
arch/arm/armv8-r/include/etc/: scif.h  timer.h
arch/arm/armv8-r/src/: arch.ld.S  arch_crt0.S  arch_gic.c  arch_main.c
framework/include/: fwk_arch.h
framework/src/: fwk_arch.c  fwk_core.c  fwk_notification.c  fwk_slist.c
product/rcar4/: product.mk
product/rcar4/include/: rcar4_common.h  rcar4_core.h  rcar4_def.h  rcar4_irq.h  rcar4_mfismh.h  rcar4_mmap.h  rcar4_mmap_scp.h  rcar4_scmi.h  rcar4_scmi_id.h  rcar4_sds.h  rcar4_syscalls.h  software_mmap.h  system_mmap.h  system_mmap_scp.h
product/rcar4/module/rcar4_system/: CMakeLists.txt  Module.cmake
product/rcar4/module/rcar4_system/include/: mod_rcar4_system.h
product/rcar4/module/rcar4_system/src/: FreeRTOS_tick_config.c  mod_rcar4_system.c  rcar4_call_sram.S  rcar4_common.c  rcar4_iic_dvfs.c  rcar4_iic_dvfs.h  rcar4_pwc.c  rcar4_pwc.h
product/rcar4/scp_ramfw/: CMakeLists.txt  Firmware.cmake  FreeRTOSConfig.h  Toolchain-GNU.cmake  clock_devices.h  config_clock.c  config_power_domain.c  config_power_domain.h  config_rcar4_clock.c  config_rcar4_mfismh.c  config_rcar4_pd_core.c  config_rcar4_pd_core.h  config_rcar4_pd_sysc.c  config_rcar4_pd_sysc.h  config_rcar4_reset.c  config_rcar4_system.c  config_rcar4_system_power.c  config_reset_domain.c  config_scmi.c  config_scmi_reset_domain.c  config_sds.c  config_transport.c  fmw_memory.h  reset_devices.h
product/rcar4/src/: rcar4_core.c  rcar4_syscalls.c
(+138 files in other folders)
